--- a/app/src/main/res/layout/activity_daily_question.xml
+++ b/app/src/main/res/layout/activity_daily_question.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DailyQuestionActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/daily_question_date"
+        android:text="날짜"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/daily_question_question"
+        android:text="질문"/>
+
+    <EditText
+        android:layout_width="330dp"
+        android:layout_height="350dp"
+        android:id="@+id/daily_question_answer"
+        android:hint="어떻게 생각하시나요?"/>
+
+    <Button
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:id="@+id/daily_question_toindex"
+        android:text="목록"/>
+
+    <Button
+        android:layout_width="110dp"
+        android:layout_height="60dp"
+        android:id="@+id/daily_question_submit"
+        android:text="제출"/>
+
+</RelativeLayout>
