--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="beige_200">#FEF7E5</color>
-    <color name="beige_500">#EAD9AD</color>
-    <color name="beige_700">#D4B888</color>
+    <color name="beige_200">#F9EFCE</color>
+    <color name="beige_500">#DCCCAC</color>
+    <color name="beige_700">#CCBA97</color>
     <color name="point_light">#C8A28B</color>
     <color name="point_dark">#6C4747</color>
     <color name="pink">#F5C0AE</color>
