--- a/app/src/main/res/layout/activity_daily_question.xml
+++ b/app/src/main/res/layout/activity_daily_question.xml
@@ -5,36 +5,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DailyQuestionActivity">
+    tools:context=".DailyQuestionActivity"
+    android:paddingLeft="40dp"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/daily_question_date"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="30dp"
         android:text="날짜"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/daily_question_question"
-        android:text="질문"/>
+        android:layout_below="@+id/daily_question_date"
+        android:fontFamily="@font/dovemayo"
+        android:layout_marginTop="10dp"
+        android:textSize="30dp"
+        android:text="카테고리/질문"/>
 
     <EditText
         android:layout_width="330dp"
         android:layout_height="350dp"
         android:id="@+id/daily_question_answer"
-        android:hint="어떻게 생각하시나요?"/>
+        android:layout_below="@+id/daily_question_question"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="30dp"
+        android:hint="어떻게 생각하시나요?"
+        android:textAlignment="center"/>
 
-    <Button
-        android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:id="@+id/daily_question_toindex"
-        android:text="목록"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/daily_question_answer"
+        android:layout_centerHorizontal="true"
+        >
 
-    <Button
-        android:layout_width="110dp"
-        android:layout_height="60dp"
-        android:id="@+id/daily_question_submit"
-        android:text="제출"/>
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="60dp"
+            android:id="@+id/daily_question_toindex"
+            android:layout_below="@+id/daily_question_answer"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="30dp"
+            android:backgroundTint="@color/dark"
+            android:text="목록"
+            android:textStyle="bold"/>
+
+        <Button
+            android:layout_width="110dp"
+            android:layout_height="60dp"
+            android:id="@+id/daily_question_submit"
+            android:layout_below="@+id/daily_question_answer"
+            android:layout_toRightOf="@+id/daily_question_toindex"
+            android:fontFamily="@font/dovemayo"
+            android:layout_marginLeft="30dp"
+            android:textSize="30dp"
+            android:backgroundTint="@color/dark"
+            android:text="제출"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
