--- a/app/src/main/res/layout/activity_category_setting.xml
+++ b/app/src/main/res/layout/activity_category_setting.xml
@@ -1,9 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".CategorySettingActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="36dp"
+            android:text="카테고리 설정"
+            android:gravity="center">
+
+
+        </TextView>
+
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_love"
+                android:id="@+id/chk_love" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_hobby"
+                android:id="@+id/chk_hobby" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_relationship"
+                android:id="@+id/chk_relationship" />
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_sports"
+                android:id="@+id/chk_sports" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_movie"
+                android:id="@+id/chk_movie" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            card_view:cardCornerRadius="20dp"
+            android:layout_weight="1"
+            card_view:cardUseCompatPadding="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:button="@drawable/chk_music"
+                android:id="@+id/chk_music" />
+        </androidx.cardview.widget.CardView>
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="제출"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="30dp"
+            android:backgroundTint="@color/dark"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            >
+        </Button>
+
+
+
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
