--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -5,7 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_vertical"
     tools:context=".FindPasswordActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:text="비밀번호 찾기"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 
     <EditText
         android:id="@+id/editEmail"
@@ -13,17 +26,40 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:fontFamily="@font/dovemayo"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:textSize="20dp"
         android:hint="이메일" />
 
     <Button
         android:id="@+id/btnSend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dovemayo"
+        android:backgroundTint="@color/dark"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:textSize="20dp"
         android:text="비밀번호 재설정 메일 전송" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <TextView
         android:id="@+id/textMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dovemayo"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:gravity="center"
+        android:textColor="@color/pink"
         android:text="" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"/>
+
 </LinearLayout>
