--- a/app/src/main/res/layout/activity_category_setting.xml
+++ b/app/src/main/res/layout/activity_category_setting.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -175,6 +176,7 @@
             android:backgroundTint="@color/dark"
             android:layout_gravity="center"
             android:textStyle="bold"
+            android:textColor="#ffffff"
             android:id="@+id/btn_submit"
             >
         </Button>
