--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,11 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SettingActivity">
-
-    <Button
-        android:id="@+id/btnLogout"
+    android:background="#ffffff"
+    tools:context=".SettingActivity"
+    android:gravity="center">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그아웃" />
+        android:orientation="vertical"
+        >
+        <Button
+            android:id="@+id/btn_reset"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/dark"
+            android:textColor="#ffffff"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:text="카테고리 재설정" />
+
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="60dp"
+        >
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/dark"
+            android:textColor="#ffffff"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:text="로그아웃" />
+
+
+    </LinearLayout>
+
 </LinearLayout>
