11/09 회원가입,로그인,비밀번호 찾기 UI 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:fontFamily="@font/dovemayo"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
