--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -39,6 +39,7 @@
         android:fontFamily="@font/dovemayo"
         android:backgroundTint="@color/dark"
         android:layout_marginLeft="50dp"
+        android:textColor="#ffffff"
         android:layout_marginRight="50dp"
         android:textSize="20dp"
         android:text="비밀번호 재설정 메일 전송" />
