--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,8 @@
         android:fontFamily="@font/dovemayo"
         android:textSize="40dp"
         android:gravity="center"
-        android:text="로그인"/>
+        android:text="로그인"
+        />
 
     <TextView
         android:layout_width="match_parent"
@@ -57,7 +58,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:textSize="20dp"
-        android:text="로그인" />
+        android:text="로그인"
+        android:textColor="#ffffff"/>
 
     <TextView
         android:layout_width="match_parent"
