--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,48 +8,66 @@
     android:background="#ffffff"
     tools:context=".SettingActivity"
     android:gravity="center">
-    <LinearLayout
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        <Button
-            android:id="@+id/btn_reset"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/dark"
-            android:textColor="#ffffff"
-            android:fontFamily="@font/dovemayo"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:text="카테고리 재설정" />
+        android:fontFamily="@font/dovemayo"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:text="환경설정"/>
 
-
-    </LinearLayout>
-
-
-
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+
+    <Button
+        android:id="@+id/btn_reset"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="60dp"
-        >
-        <Button
-            android:id="@+id/btnLogout"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/dark"
-            android:textColor="#ffffff"
-            android:fontFamily="@font/dovemayo"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:text="로그아웃" />
+        android:layout_gravity="center"
+        android:backgroundTint="@color/dark"
+        android:fontFamily="@font/dovemayo"
+        android:text="카테고리 재설정"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/dark"
+        android:fontFamily="@font/dovemayo"
+        android:text="로그아웃"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+
+    <Button
+        android:id="@+id/btnSignout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/dark"
+        android:fontFamily="@font/dovemayo"
+        android:text="회원탈퇴"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
+
 
 </LinearLayout>
