--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,9 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntroActivity">
+    tools:context=".IntroActivity"
+    android:background="@color/very_light">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/light"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intro_title"
+        android:text="Q&amp;A"
+        android:textSize="35dp"
+        android:fontFamily="@font/dovemayo"
+        android:textColor="@color/dark"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/first_100"
+        android:layout_below="@+id/intro_title"
+        android:fontFamily="@font/tttogether"
+        android:layout_centerHorizontal="true"
+        android:text="100"
+        android:textColor="#996D6562"
+        android:textSize="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/second_100"
+        android:layout_below="@+id/first_100"
+        android:fontFamily="@font/tttogether"
+        android:layout_centerHorizontal="true"
+        android:text="100"
+        android:textColor="#996D6562"
+        android:textSize="90dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/third_100"
+        android:layout_below="@+id/second_100"
+        android:fontFamily="@font/tttogether"
+        android:layout_centerHorizontal="true"
+        android:text="100"
+        android:textColor="#996D6562"
+        android:textSize="130dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fourth_100"
+        android:layout_below="@+id/third_100"
+        android:fontFamily="@font/tttogether"
+        android:layout_centerHorizontal="true"
+        android:text="100"
+        android:textColor="#996D6562"
+        android:textSize="170dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fifth_100"
+        android:layout_below="@+id/fourth_100"
+        android:fontFamily="@font/tttogether"
+        android:layout_centerHorizontal="true"
+        android:text="100"
+        android:textColor="#996D6562"
+        android:textSize="210dp" />
+
+
+</RelativeLayout>
