--- a/app/src/main/res/layout/activity_question_result.xml
+++ b/app/src/main/res/layout/activity_question_result.xml
@@ -82,6 +82,7 @@
         <EditText
             android:layout_width="300dp"
             android:layout_height="140dp"
+            android:id="@+id/question_result_recomment_text"
             android:hint="추천할 질문을 써주세요!"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
@@ -91,6 +92,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/question_result_submit"
             android:text="제출"
             android:fontFamily="@font/dovemayo"
             android:textSize="20dp"
