--- a/app/src/main/res/layout/activity_category_setting.xml
+++ b/app/src/main/res/layout/activity_category_setting.xml
@@ -36,21 +36,21 @@
         android:orientation="horizontal"
         >
         <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
+            card:cardCornerRadius="20dp"
             android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
+            card:cardUseCompatPadding="true">
+
             <CheckBox
+                android:id="@+id/chk_love"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:gravity="center"
-                android:button="@drawable/chk_love"
-                android:id="@+id/chk_love" />
+                android:background="@drawable/chk_love"
+                android:button="@android:color/transparent"
+                android:gravity="center" />
 
         </androidx.cardview.widget.CardView>
 
@@ -69,7 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:button="@drawable/chk_music"
+                android:background="@drawable/chk_music"
+                android:button="@android:color/transparent"
                 android:gravity="center" />
 
         </androidx.cardview.widget.CardView>
@@ -89,7 +90,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:button="@drawable/chk_relationship"
+                android:background="@drawable/chk_relationship"
+                android:button="@android:color/transparent"
                 android:gravity="center" />
 
         </androidx.cardview.widget.CardView>
@@ -116,7 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:button="@drawable/chk_sports"
+                android:background="@drawable/chk_sports"
+                android:button="@android:color/transparent"
                 android:id="@+id/chk_sports" />
         </androidx.cardview.widget.CardView>
 
@@ -135,7 +138,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:button="@drawable/chk_movie"
+                android:background="@drawable/chk_movie"
+                android:button="@android:color/transparent"
                 android:gravity="center" />
         </androidx.cardview.widget.CardView>
 
@@ -153,7 +157,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:button="@drawable/chk_etc"
+                android:background="@drawable/chk_etc"
+                android:button="@android:color/transparent"
                 android:id="@+id/chk_etc" />
         </androidx.cardview.widget.CardView>
 
