//daily question xml 수정

--- a/app/src/main/res/layout/activity_daily_question.xml
+++ b/app/src/main/res/layout/activity_daily_question.xml
@@ -6,73 +6,107 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DailyQuestionActivity"
-    android:paddingLeft="40dp"
+    android:gravity="center"
     >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/daily_question_date"
-        android:layout_marginTop="50dp"
-        android:fontFamily="@font/dovemayo"
-        android:textSize="30dp"
-        android:text="날짜"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/daily_question_question"
-        android:layout_below="@+id/daily_question_date"
-        android:fontFamily="@font/dovemayo"
-        android:layout_marginTop="10dp"
-        android:textSize="30dp"
-        android:text="카테고리/질문"/>
-
-    <EditText
-        android:layout_width="330dp"
-        android:layout_height="350dp"
-        android:id="@+id/daily_question_answer"
-        android:layout_below="@+id/daily_question_question"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/dovemayo"
-        android:textSize="30dp"
-        android:hint="어떻게 생각하시나요?"
-        android:background="@color/very_light"
-        android:textAlignment="center"/>
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/daily_question_answer"
-        android:layout_centerHorizontal="true"
-        >
+        android:orientation="vertical">
 
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="60dp"
-            android:id="@+id/daily_question_toindex"
-            android:layout_below="@+id/daily_question_answer"
-            android:fontFamily="@font/dovemayo"
-            android:textSize="30dp"
-            android:backgroundTint="@color/dark"
-            android:text="목록"
-            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/daily_question_question"
+            android:layout_marginBottom="10dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/daily_question_date"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:text="날짜"/>
 
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="60dp"
-            android:id="@+id/daily_question_submit"
-            android:layout_below="@+id/daily_question_answer"
-            android:layout_toRightOf="@+id/daily_question_toindex"
+
+
+            <TextView
+                android:id="@+id/daily_question_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/dovemayo"
+                android:layout_marginLeft="36dp"
+                android:text="카테고리"
+                android:textStyle="bold"
+                android:textSize="24dp"
+                />
+        </LinearLayout>
+
+
+
+        <TextView
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/daily_question_question"
             android:fontFamily="@font/dovemayo"
-            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:text="질문"/>
+
+        <EditText
+            android:layout_width="330dp"
+            android:layout_height="350dp"
+            android:id="@+id/daily_question_answer"
+            android:layout_below="@+id/daily_question_question"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/dovemayo"
+            android:padding="15dp"
             android:textSize="30dp"
-            android:backgroundTint="@color/dark"
-            android:text="제출"
-            android:textStyle="bold"/>
+            android:hint="어떻게 생각하시나요?"
+            android:background="@color/very_light"
+            android:textAlignment="center"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/daily_question_answer"
+            >
+
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="60dp"
+                android:id="@+id/daily_question_toindex"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="30dp"
+                android:backgroundTint="@color/dark"
+                android:text="목록"
+                android:textStyle="bold"/>
+
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="60dp"
+                android:id="@+id/daily_question_submit"
+                android:layout_toRightOf="@+id/daily_question_toindex"
+                android:fontFamily="@font/dovemayo"
+                android:layout_marginLeft="110dp"
+                android:textSize="30dp"
+                android:backgroundTint="@color/dark"
+                android:text="제출"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+
+
+
+
+
+
+
 
     </LinearLayout>
+
 
 </RelativeLayout>
