--- a/app/src/main/res/layout/activity_daily_question.xml
+++ b/app/src/main/res/layout/activity_daily_question.xml
@@ -11,23 +11,27 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/daily_question_question"
             android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|center_horizontal"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/daily_question_date"
                 android:fontFamily="@font/dovemayo"
-                android:textSize="24dp"
+                android:textSize="20dp"
+                android:gravity="left"
+                android:layout_weight="1"
                 android:textStyle="bold"
                 android:text="날짜"/>
-
 
 
             <TextView
@@ -35,11 +39,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dovemayo"
-                android:layout_marginLeft="36dp"
+                android:gravity="right"
+                android:layout_weight="1"
                 android:text="카테고리"
-                android:textStyle="bold"
-                android:textSize="24dp"
-                />
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
@@ -50,7 +54,7 @@
             android:id="@+id/daily_question_question"
             android:fontFamily="@font/dovemayo"
             android:layout_marginTop="10dp"
-            android:textSize="18dp"
+            android:textSize="24dp"
             android:textStyle="bold"
             android:text="질문"/>
 
