--- a/app/src/main/res/layout/activity_category_setting.xml
+++ b/app/src/main/res/layout/activity_category_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,190 +8,249 @@
     android:gravity="center"
     android:background="#ffffff">
 
-    <LinearLayout
+
+    <TextView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="36dp"
+        android:text="카테고리 설정"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/very_dark">
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="20dp"
+        android:text="원하는 카테고리를 클릭해주세요."
+        android:layout_gravity="center"
+        android:textColor="@color/very_dark"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
+        android:layout_marginTop="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/dovemayo"
-            android:textSize="36dp"
-            android:text="카테고리 설정"
-            android:gravity="center">
-
-
-        </TextView>
-
-
-    </LinearLayout>
-
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card:cardUseCompatPadding="true">
-
-            <CheckBox
-                android:id="@+id/chk_love"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/chk_love"
-                android:button="@android:color/transparent"
-                android:gravity="center" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
-
-            <CheckBox
-                android:id="@+id/chk_music"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/chk_music"
-                android:button="@android:color/transparent"
-                android:gravity="center" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
-
-            <CheckBox
-                android:id="@+id/chk_relationship"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/chk_relationship"
-                android:button="@android:color/transparent"
-                android:gravity="center" />
-
-        </androidx.cardview.widget.CardView>
-
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
-                android:background="@drawable/chk_sports"
-                android:button="@android:color/transparent"
-                android:id="@+id/chk_sports" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
-
-            <CheckBox
-                android:id="@+id/chk_movie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/chk_movie"
-                android:button="@android:color/transparent"
-                android:gravity="center" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            card_view:cardCornerRadius="20dp"
-            android:layout_weight="1"
-            card_view:cardUseCompatPadding="true">
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
-                android:background="@drawable/chk_etc"
-                android:button="@android:color/transparent"
-                android:id="@+id/chk_etc" />
-        </androidx.cardview.widget.CardView>
-
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <Button
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="제출"
-            android:fontFamily="@font/dovemayo"
-            android:textSize="30dp"
-            android:backgroundTint="@color/dark"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:id="@+id/btn_submit"
-            >
-        </Button>
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card:cardUseCompatPadding="true">
+
+                <CheckBox
+                    android:id="@+id/chk_love"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_love"
+                    android:button="@android:color/transparent"/>
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="연애/결혼"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card_view:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card_view:cardUseCompatPadding="true">
 
+                <CheckBox
+                    android:id="@+id/chk_music"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_music"
+                    android:button="@android:color/transparent"/>
+            </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="음악"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card_view:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card_view:cardUseCompatPadding="true">
+
+                <CheckBox
+                    android:id="@+id/chk_relationship"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_relationship"
+                    android:button="@android:color/transparent" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인간관계"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card_view:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card_view:cardUseCompatPadding="true">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_sports"
+                    android:button="@android:color/transparent"
+                    android:id="@+id/chk_sports" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="운동/건강"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card_view:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card_view:cardUseCompatPadding="true">
+
+                <CheckBox
+                    android:id="@+id/chk_movie"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_movie"
+                    android:button="@android:color/transparent"/>
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="음악"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_margin="10dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                card_view:cardCornerRadius="20dp"
+                android:layout_weight="1"
+                card_view:cardUseCompatPadding="true">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/chk_etc"
+                    android:button="@android:color/transparent"
+                    android:id="@+id/chk_etc" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="기타"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="22dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/category_setting_submit"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="제출"
+        android:fontFamily="@font/dovemayo"
+        android:textSize="25dp"
+        android:backgroundTint="@color/dark"
+        android:layout_gravity="center"
+        android:textColor="#ffffff" />
 
 </LinearLayout>
