--- a/app/src/main/res/layout/activity_daily_question.xml
+++ b/app/src/main/res/layout/activity_daily_question.xml
@@ -30,7 +30,6 @@
                 android:textSize="20dp"
                 android:gravity="left"
                 android:layout_weight="1"
-                android:textStyle="bold"
                 android:text="날짜"/>
 
 
@@ -42,8 +41,7 @@
                 android:gravity="right"
                 android:layout_weight="1"
                 android:text="카테고리"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textSize="20dp"/>
         </LinearLayout>
 
 
@@ -55,7 +53,6 @@
             android:fontFamily="@font/dovemayo"
             android:layout_marginTop="10dp"
             android:textSize="24dp"
-            android:textStyle="bold"
             android:text="질문"/>
 
         <EditText
@@ -85,8 +82,7 @@
                 android:fontFamily="@font/dovemayo"
                 android:textSize="30dp"
                 android:backgroundTint="@color/dark"
-                android:text="목록"
-                android:textStyle="bold"/>
+                android:text="목록"/>
 
             <Button
                 android:layout_width="110dp"
@@ -97,8 +93,7 @@
                 android:layout_marginLeft="110dp"
                 android:textSize="30dp"
                 android:backgroundTint="@color/dark"
-                android:text="제출"
-                android:textStyle="bold"/>
+                android:text="제출"/>
 
         </LinearLayout>
 
