--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,73 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffff"
-    tools:context=".SettingActivity"
-    android:gravity="center">
+    tools:context=".SettingActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dovemayo"
-        android:textSize="40dp"
-        android:gravity="center"
-        android:text="환경설정"/>
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/light"
+        android:layout_alignParentRight="true"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-
-    <Button
-        android:id="@+id/btn_reset"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/dark"
-        android:fontFamily="@font/dovemayo"
-        android:text="카테고리 재설정"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
-
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/dark"
-        android:fontFamily="@font/dovemayo"
-        android:text="로그아웃"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
-
-    <Button
-        android:id="@+id/btnSignout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/dark"
-        android:fontFamily="@font/dovemayo"
-        android:text="회원탈퇴"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        <TextView
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting_title"
+            android:fontFamily="@font/dovemayo"
+            android:textSize="40dp"
+            android:text="환경설정"
+            android:gravity="center_horizontal"/>
 
 
-</LinearLayout>
+
+        <Button
+            android:id="@+id/btn_reset"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/setting_title"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/dark"
+            android:fontFamily="@font/dovemayo"
+            android:text="카테고리 재설정"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:layout_marginTop="40dp"/>
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_reset"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/dark"
+            android:fontFamily="@font/dovemayo"
+            android:text="로그아웃"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:layout_marginTop="10dp"/>
+
+        <Button
+            android:id="@+id/btnSignout"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnLogout"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/dark"
+            android:fontFamily="@font/dovemayo"
+            android:text="회원탈퇴"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:layout_marginTop="10dp"/>
+    </RelativeLayout>
+</RelativeLayout>
